[project]
name = "fly-mobileclip"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
torch = "^2.7.1"
torchvision = "^0.22.1"
requests = "^2.32.3"
pillow = "^11.2.1"
open-clip-torch = "^2.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
